# ml-hw2

./: homework_2_setup.ipynb  pyproject.toml  requirements.txt
datasets/kdd_balanced/: balanced_dataset.parquet  metadata.json
