[project]
name = "2irr50-statistics-and-machine-learning"
version = "0.1.0"
description = "Course assignments for 2IRR50 - Statistics and Machine Learning at Eindhoven University of Technology"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastparquet>=2024.11.0",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.4.0",
    "matplotlib>=3.10.1",
    "nbconvert>=7.16.6",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
]
